// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eBikes entity get product list retrieve more products 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Rolling Mountain - Female",
      "Price__c": 2300,
    },
    Object {
      "Name": "Rolling Mountain - Male",
      "Price__c": 2300,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve more products 2`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Neomov - Suspension",
      "Price__c": 1850,
    },
    Object {
      "Name": "Neomov - Female frame",
      "Price__c": 1450,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve most expensive products 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Rolling Mountain - Female",
      "Price__c": 2300,
    },
    Object {
      "Name": "Rolling Mountain - Male",
      "Price__c": 2300,
    },
    Object {
      "Name": "Neomov - Suspension",
      "Price__c": 1850,
    },
    Object {
      "Name": "Neomov - Male frame",
      "Price__c": 1450,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve products by exact Name 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Neomov - Basic",
      "Price__c": 1450,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve products by matching Name 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Neomov - Basic",
      "Price__c": 1450,
    },
    Object {
      "Name": "Neomov - Female frame",
      "Price__c": 1450,
    },
    Object {
      "Name": "Neomov - Male frame",
      "Price__c": 1450,
    },
    Object {
      "Name": "Neomov - Suspension",
      "Price__c": 1850,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve products in price range 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Neomov - Basic",
      "Price__c": 1450,
    },
    Object {
      "Name": "Neomov - Female frame",
      "Price__c": 1450,
    },
    Object {
      "Name": "Neomov - Male frame",
      "Price__c": 1450,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve products male or female products only 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Gender__c": "Female",
      "Name": "Neomov - Female frame",
      "Price__c": 1450,
    },
    Object {
      "Gender__c": "Male",
      "Name": "Neomov - Male frame",
      "Price__c": 1450,
    },
    Object {
      "Gender__c": "Female",
      "Name": "Rolling Mountain - Female",
      "Price__c": 2300,
    },
    Object {
      "Gender__c": "Male",
      "Name": "Rolling Mountain - Male",
      "Price__c": 2300,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve products order by gender and price 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Gender__c": "Unisex",
      "Name": "Wisper foldable - Upgraded",
      "Price__c": 1230,
    },
    Object {
      "Gender__c": "Unisex",
      "Name": "Wisper foldable",
      "Price__c": 1230,
    },
    Object {
      "Gender__c": "Unisex",
      "Name": "Neomov - Basic",
      "Price__c": 1450,
    },
    Object {
      "Gender__c": "Unisex",
      "Name": "Neomov - Suspension",
      "Price__c": 1850,
    },
    Object {
      "Gender__c": "Male",
      "Name": "Neomov - Male frame",
      "Price__c": 1450,
    },
    Object {
      "Gender__c": "Male",
      "Name": "Rolling Mountain - Male",
      "Price__c": 2300,
    },
    Object {
      "Gender__c": "Female",
      "Name": "Neomov - Female frame",
      "Price__c": 1450,
    },
    Object {
      "Gender__c": "Female",
      "Name": "Rolling Mountain - Female",
      "Price__c": 2300,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve the products with suspensions 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Neomov - Suspension",
      "Price__c": 1850,
      "Suspension__c": true,
    },
    Object {
      "Name": "Rolling Mountain - Female",
      "Price__c": 2300,
      "Suspension__c": true,
    },
    Object {
      "Name": "Rolling Mountain - Male",
      "Price__c": 2300,
      "Suspension__c": true,
    },
  ],
}
`;

exports[`eBikes entity get product list retrieve the products with the "Rolling Mountain" family Name 1`] = `
Object {
  "Product__c": Array [
    Object {
      "Name": "Rolling Mountain - Female",
      "Price__c": 2300,
      "Product_Family__c": Object {
        "Name": "Rolling Mountain",
      },
    },
  ],
}
`;

exports[`eBikes entity introspection introspect schema 1`] = `
"type Product__c implements Entity {
  Id: ID!
  OwnerId: ID!
  IsDeleted: Boolean!
  Name: String
  CreatedDate: DateTime!
  CreatedById: ID!
  LastModifiedDate: DateTime!
  LastModifiedById: ID!
  SystemModstamp: DateTime!
  LastViewedDate: DateTime
  LastReferencedDate: DateTime
  Autonomy__c: Float
  Description__c: TextArea
  Gender__c: Picklist
  Picture_URL__c: URL!
  Price__c: Currency
  Product_Family__c: Product_Family__c
  Suspension__c: Boolean!
}

interface Entity {
  Id: ID
  Name: String
}

scalar DateTime

scalar TextArea

scalar Picklist

scalar URL

scalar Currency

type Product_Family__c implements Entity {
  Id: ID!
  OwnerId: ID!
  IsDeleted: Boolean!
  Name: String
  CreatedDate: DateTime!
  CreatedById: ID!
  LastModifiedDate: DateTime!
  LastModifiedById: ID!
  SystemModstamp: DateTime!
  LastViewedDate: DateTime
  LastReferencedDate: DateTime
  Category__c: Picklist
  Description__c: TextArea
}

type Order_Item__c implements Entity {
  Id: ID!
  IsDeleted: Boolean!
  Name: String!
  CreatedDate: DateTime!
  CreatedById: ID!
  LastModifiedDate: DateTime!
  LastModifiedById: ID!
  SystemModstamp: DateTime!
  LastViewedDate: DateTime
  LastReferencedDate: DateTime
  Order__c: Order__c!
  Product__c: Product__c!
}

type Order__c implements Entity {
  Id: ID!
  OwnerId: ID!
  IsDeleted: Boolean!
  Name: String!
  CreatedDate: DateTime!
  CreatedById: ID!
  LastModifiedDate: DateTime!
  LastModifiedById: ID!
  SystemModstamp: DateTime!
  LastViewedDate: DateTime
  LastReferencedDate: DateTime
}

type Query {
  Product__c(limit: Int!, offset: Int, where: Product__cColumnExpr, order_by: [Product__cOrderBy]): [Product__c]
  Product__c_by_id(id: ID): Product__c
  Product_Family__c(limit: Int!, offset: Int, where: Product_Family__cColumnExpr, order_by: [Product_Family__cOrderBy]): [Product_Family__c]
  Product_Family__c_by_id(id: ID): Product_Family__c
  Order_Item__c(limit: Int!, offset: Int, where: Order_Item__cColumnExpr, order_by: [Order_Item__cOrderBy]): [Order_Item__c]
  Order_Item__c_by_id(id: ID): Order_Item__c
  Order__c(limit: Int!, offset: Int, where: Order__cColumnExpr, order_by: [Order__cOrderBy]): [Order__c]
  Order__c_by_id(id: ID): Order__c
}

input Product__cColumnExpr {
  _and: [Product__cColumnExpr]
  _or: [Product__cColumnExpr]
  Id: IDOperator
  IsDeleted: BooleanOperator
  Name: StringOperator
  CreatedDate: DateTimeOperator
  CreatedById: OrderByEnum
  LastModifiedDate: DateTimeOperator
  LastModifiedById: OrderByEnum
  SystemModstamp: DateTimeOperator
  LastViewedDate: DateTimeOperator
  LastReferencedDate: DateTimeOperator
  Autonomy__c: FloatOperator
  Gender__c: PicklistOperator
  Picture_URL__c: URLOperator
  Price__c: CurrencyOperator
  Product_Family__c: Product_Family__cColumnExpr
  Suspension__c: BooleanOperator
}

input IDOperator {
  _eq: ID
  _neq: ID
  _gt: ID
  _lt: ID
  _gte: ID
  _lte: ID
  _in: [ID]
  _nin: [ID]
}

input BooleanOperator {
  _eq: Boolean
  _neq: Boolean
  _gt: Boolean
  _lt: Boolean
  _gte: Boolean
  _lte: Boolean
  _in: [Boolean]
  _nin: [Boolean]
}

input StringOperator {
  _eq: String
  _neq: String
  _gt: String
  _lt: String
  _gte: String
  _lte: String
  _in: [String]
  _nin: [String]
  _like: String
}

input DateTimeOperator {
  _eq: DateTime
  _neq: DateTime
  _gt: DateTime
  _lt: DateTime
  _gte: DateTime
  _lte: DateTime
  _in: [DateTime]
  _nin: [DateTime]
}

enum OrderByEnum {
  ASC
  DESC
  ASC_NULLS_FIRST
  ASC_NULLS_LAST
  DESC_NULLS_FIRST
  DESC_NULLS_LAST
}

input FloatOperator {
  _eq: Float
  _neq: Float
  _gt: Float
  _lt: Float
  _gte: Float
  _lte: Float
  _in: [Float]
  _nin: [Float]
}

input PicklistOperator {
  _eq: Picklist
  _neq: Picklist
  _gt: Picklist
  _lt: Picklist
  _gte: Picklist
  _lte: Picklist
  _in: [Picklist]
  _nin: [Picklist]
}

input URLOperator {
  _eq: URL
  _neq: URL
  _gt: URL
  _lt: URL
  _gte: URL
  _lte: URL
  _in: [URL]
  _nin: [URL]
}

input CurrencyOperator {
  _eq: Currency
  _neq: Currency
  _gt: Currency
  _lt: Currency
  _gte: Currency
  _lte: Currency
  _in: [Currency]
  _nin: [Currency]
}

input Product_Family__cColumnExpr {
  _and: [Product_Family__cColumnExpr]
  _or: [Product_Family__cColumnExpr]
  Id: IDOperator
  IsDeleted: BooleanOperator
  Name: StringOperator
  CreatedDate: DateTimeOperator
  CreatedById: OrderByEnum
  LastModifiedDate: DateTimeOperator
  LastModifiedById: OrderByEnum
  SystemModstamp: DateTimeOperator
  LastViewedDate: DateTimeOperator
  LastReferencedDate: DateTimeOperator
  Category__c: PicklistOperator
}

input Product__cOrderBy {
  Id: OrderByEnum
  OwnerId: OrderByEnum
  IsDeleted: OrderByEnum
  Name: OrderByEnum
  CreatedDate: OrderByEnum
  CreatedById: OrderByEnum
  LastModifiedDate: OrderByEnum
  LastModifiedById: OrderByEnum
  SystemModstamp: OrderByEnum
  LastViewedDate: OrderByEnum
  LastReferencedDate: OrderByEnum
  Autonomy__c: OrderByEnum
  Gender__c: OrderByEnum
  Picture_URL__c: OrderByEnum
  Price__c: OrderByEnum
  Product_Family__c: OrderByEnum
  Suspension__c: OrderByEnum
}

input Product_Family__cOrderBy {
  Id: OrderByEnum
  OwnerId: OrderByEnum
  IsDeleted: OrderByEnum
  Name: OrderByEnum
  CreatedDate: OrderByEnum
  CreatedById: OrderByEnum
  LastModifiedDate: OrderByEnum
  LastModifiedById: OrderByEnum
  SystemModstamp: OrderByEnum
  LastViewedDate: OrderByEnum
  LastReferencedDate: OrderByEnum
  Category__c: OrderByEnum
}

input Order_Item__cColumnExpr {
  _and: [Order_Item__cColumnExpr]
  _or: [Order_Item__cColumnExpr]
  Id: IDOperator
  IsDeleted: BooleanOperator
  Name: StringOperator
  CreatedDate: DateTimeOperator
  CreatedById: OrderByEnum
  LastModifiedDate: DateTimeOperator
  LastModifiedById: OrderByEnum
  SystemModstamp: DateTimeOperator
  LastViewedDate: DateTimeOperator
  LastReferencedDate: DateTimeOperator
  Order__c: Order__cColumnExpr
  Product__c: Product__cColumnExpr
}

input Order__cColumnExpr {
  _and: [Order__cColumnExpr]
  _or: [Order__cColumnExpr]
  Id: IDOperator
  IsDeleted: BooleanOperator
  Name: StringOperator
  CreatedDate: DateTimeOperator
  CreatedById: OrderByEnum
  LastModifiedDate: DateTimeOperator
  LastModifiedById: OrderByEnum
  SystemModstamp: DateTimeOperator
  LastViewedDate: DateTimeOperator
  LastReferencedDate: DateTimeOperator
}

input Order_Item__cOrderBy {
  Id: OrderByEnum
  IsDeleted: OrderByEnum
  Name: OrderByEnum
  CreatedDate: OrderByEnum
  CreatedById: OrderByEnum
  LastModifiedDate: OrderByEnum
  LastModifiedById: OrderByEnum
  SystemModstamp: OrderByEnum
  LastViewedDate: OrderByEnum
  LastReferencedDate: OrderByEnum
  Order__c: OrderByEnum
  Product__c: [Product__cOrderBy]
}

input Order__cOrderBy {
  Id: OrderByEnum
  OwnerId: OrderByEnum
  IsDeleted: OrderByEnum
  Name: OrderByEnum
  CreatedDate: OrderByEnum
  CreatedById: OrderByEnum
  LastModifiedDate: OrderByEnum
  LastModifiedById: OrderByEnum
  SystemModstamp: OrderByEnum
  LastViewedDate: OrderByEnum
  LastReferencedDate: OrderByEnum
}"
`;
